feat(service): add logic for predict method in TriageServiceImpl. Update TriageService base class's generics